--- a/src/app/share/iu/navbar/navbar.component.html
+++ b/src/app/share/iu/navbar/navbar.component.html
@@ -1,1 +1,20 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <div class="container-fluid">
+    <a class="navbar-brand col-9 col-sm-9 col-xl-6 col-md-6" href="#">
+      Blog NVL
+    </a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="line"></span>
+      <span class="line"></span>
+      <span class="line" style="margin-bottom: 0;"></span>
+    </button>
+    <div class="collapse navbar-collapse col-xl-6 col-md-6" id="navbarNavAltMarkup">
+      <div class="navbar-nav">
+        <a class="nav-item nav-link text-center" href="#">About Me</a>
+        <a class="nav-item nav-link text-center" href="#">Skills</a>
+        <a class="nav-item nav-link text-center" href="#">Portfolio</a>
+        <a class="nav-item nav-link text-center h6 contact" href="#">Contact Me</a>
+      </div>
+    </div>
+  </div>
+</nav>
