--- a/src/app/share/iu/footer/footer.component.html
+++ b/src/app/share/iu/footer/footer.component.html
@@ -1,1 +1,13 @@
-<p>footer works!</p>
+<div class="footer">
+  <div class="text-center">
+    <img class="icon"  src="../../../../assets/up.png" alt="">
+  </div>
+  <p class="text-center h5">BACK TO TOP</p>
+  <div class="text-center">
+    <a href="https://www.facebook.com/dieu.phieu.969"><img class="icon"  src="../../../../assets/facebook.png" alt=""></a>
+    <a href="https://github.com/NguyenVanLamCNTT"><img class="icon"  src="../../../../assets/github.png" alt=""></a>
+    <a href="https://mail.google.com/mail"><img class="icon"  src="../../../../assets/gmail-logo.png" alt=""></a>
+    <a href="https://www.instagram.com/kirito_2k1/"><img class="icon"  src="../../../../assets/instagram.png" alt=""></a>
+  </div>
+  <p class="text-center" style="padding-bottom: 30px">ngocthau047@gmail.com</p>
+</div>
