--- a/src/app/layout/home/home.component.html
+++ b/src/app/layout/home/home.component.html
@@ -1,1 +1,19 @@
-<p>home works!</p>
+<!--<div style="height: 50px; background-color: aqua">-->
+<!--</div>-->
+<div class="container-fluid">
+  <div class="blocks">
+    <div class="block block--left"></div>
+    <div class="block block--right">
+      <br>
+      <div class="container">
+<!--        <div class="text-center" style="margin-left: 30px">-->
+<!--          <a class="a-item col-12" href="#">About me</a>-->
+<!--          <a class="a-item col-12" href="#">Skills</a>-->
+<!--          <a class="a-item col-12" href="#">Portfolio</a>-->
+<!--          <a class="a-item col-12" href="#">Contact me</a>-->
+<!--        </div>-->
+<!--        <img src="../../../assets/img.png" alt="" style="margin-left: 30px; margin-bottom: 10px">-->
+      </div>
+    </div>
+  </div>
+</div>
